# sentio-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  sentio.example.toml
action/: action.yml
crates/sentio-cli/: Cargo.toml
crates/sentio-cli/src/: lib.rs  main.rs  telemetry.rs
crates/sentio-cli/tests/: human_output.rs
crates/sentio-core/: Cargo.toml
crates/sentio-core/src/: anchor_accounts.rs  ast_index.rs  baseline.rs  config.rs  finding.rs  instruction_analysis.rs  lib.rs  registry.rs  rules.rs  sarif.rs  scanner.rs  syntax.rs
crates/sentio-core/src/rules/anchor/: account_info_as_cpi_program.rs  account_info_as_data_account.rs  arbitrary_cpi.rs  cpi_remaining_accounts.rs  init_if_needed_usage.rs  missing_close_constraint.rs  missing_cpi_reload.rs  missing_owner_check.rs  missing_pda_seeds_bump.rs  missing_realloc_zero.rs  missing_signer_check.rs  missing_token_mint_check.rs  missing_token_owner_check.rs  mod.rs  pda_bump_not_canonical.rs  pda_seed_collision_risk.rs  pda_seed_unvalidated_account.rs  type_cosplay.rs  unchecked_arithmetic.rs
crates/sentio-core/src/rules/math/: division_by_zero.rs  mod.rs
crates/sentio-core/src/rules/rust/: create_program_address.rs  missing_state_change_event.rs  mod.rs  unwrap_on_result.rs
crates/sentio-core/tests/: phase_a.rs  rules_sw001.rs  rules_sw002.rs  rules_sw003.rs  rules_sw005.rs  rules_sw006.rs  rules_sw008.rs  rules_sw009.rs  rules_sw010.rs  rules_sw011.rs  rules_sw012.rs  rules_sw013.rs  rules_sw014.rs  rules_sw016.rs  rules_sw018.rs  rules_sw020.rs  rules_sw021.rs  rules_sw022.rs  rules_sw023.rs  rules_sw024.rs  rules_sw025.rs  rules_sw026.rs  rules_sw027.rs  scanner.rs
crates/sentio-core/tests/common/: mod.rs
crates/sentio-core/tests/fixtures/sw001/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw002/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw003/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw005/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw006/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw008/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw009/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw010/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw011/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw012/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw013/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw014/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw016/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw018/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw020/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw021/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw022/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw023/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw024/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw025/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw026/: risky.rs  safe.rs  suppressed.rs
crates/sentio-core/tests/fixtures/sw027/: risky.rs  safe.rs  suppressed.rs
docs/: superteam-update.html
examples/: github-workflow.yml
(+1 files in other folders)
