[workspace]
members = [
    "crates/sentio-core",
    "crates/sentio-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.6"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sentio-security/sentio-rs"
authors = ["sentio-security"]
description = "AST-based security scanner for Solana/Anchor programs"
keywords = ["solana", "anchor", "security", "linter", "audit"]
categories = ["development-tools::testing", "command-line-utilities"]
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
toml = "0.8"
ureq = { version = "2.10", features = ["json"] }
uuid = { version = "1.10", features = ["v4"] }
walkdir = "2.5"
