[package]
name = "sentio-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "sentio"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
serde_json.workspace = true
ureq.workspace = true
uuid.workspace = true
sentio-core = { path = "../sentio-core", version = "0.2.5" }
