[package]
name = "sentio-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude = ["tests/**"]

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
toml.workspace = true
walkdir.workspace = true
